# yak

./: .gitignore  LICENSE  README.md  README.org  TODO.md  basics.yak  pyproject.toml  setup.cfg
doc/: 2d-graphics.md  basics.org  performance.md  yak.md
examples/: fib.y  looping.yak  while.yak
examples/draw/: __init__.py  canvas_bounds.py  color_pixels.py  linescape.py  mouse_circles.py  random_circles.py  random_lines.py  simple_linepen.py  triangles.py
examples/lang/: random-lines.yak  syntax.yak
tst/: test_geometry.py  test_parser.py  test_scanner.py  test_stack.py
tst/draw/: test_geometry.py
tst/util/: test_methodfinder.py
tst/yak/: test_parser.py  test_scanner.py
yak/: codebase.py  draw.py  fb.py  geometry.py  hal.py  interpreter.py  machine.py  parser.py  parsing.py  scanner.py  sketch.py  util.py  vm.py  window.py
yak/cmd/: __init__.py  fswatch.py  machine.py  perf.py  sdl.py  shell.py  vm.py
yak/core/: __init__.py  values.py
yak/draw/: bitblt.py  draw.py  fb.py  form.py  geometry.py  interpreter.py  sketch.py  window.py
yak/examples/: __init__.py  canvas_bounds.py  color_pixels.py  linescape.py  mouse_circles.py  random_circles.py  random_lines.py  simple_linepen.py  triangles.py
yak/exp/: methodfinder.py  things.py
yak/interpreter/: interpreter.py
yak/lang/: vm.py
yak/parse/: __init__.py  parser.py  scanner.py
yak/primitives/: __init__.py  bootstrap.py  combinators.py  ffi.py  io.py  kernel.py  namespace.py  parsing.py  quotation.py  stack.py  strings.py  syntax.py  (+3 more)
yakdraw/: color.py  draw.py  fb.py  sketch.py  window.py
(+79 files in other folders)
