[metadata]
name = yak
version = 0.0.1

[options]
packages = find:
include_package_data = True
install_requires =
    pysdl2

[options.entry_points]
console_scripts =
    yd-sdl-test = yak.cmd.sdl:test
    yak-examples = yak.examples:main

[options.extras_require]
test =
    coverage
    coverage[toml]
    pytest
    pytest-cov
