[metadata]
name = yak
version = 0.0.1

[options]
packages = find:
include_package_data = True
install_requires =
    gnureadline
    pysdl2

[options.entry_points]
console_scripts =
    yak = yak.cmd:yak
    yakvm = yak.cmd.vm:yak
    yd-sdl-test = yak.cmd.sdl:test

[options.extras_require]
test =
    coverage
    coverage[toml]
    pytest
    pytest-cov
