[metadata]
name = yak
version = 0.0.1

[options]
packages = find:
include_package_data = True
install_requires =
    flask
    gnureadline
    nanoid
    pysdl2
    requests
    watchdog

[options.entry_points]
console_scripts =
    yak = yak.cmd:yak
    yak-fswatch = yak.cmd.fswatch:run
    yakmachine = yak.cmd.machine:start
    yrsh = yak.cmd.shell:run
    yd-sdl-test = yak.cmd.sdl:test

[options.extras_require]
test =
    coverage
    coverage[toml]
    pytest
    pytest-cov
